<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/round_icon_start"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ligtasystem_icon"
        app:shapeAppearanceOverlay="@style/Circular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.imageview.ShapeableImageView>

    <TextView
        android:id="@+id/LogIn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/antic"
        android:text="@string/LogIn"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/round_icon_start"
        app:layout_constraintStart_toStartOf="@+id/round_icon_start"
        app:layout_constraintTop_toBottomOf="@+id/round_icon_start" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/EmailAddress"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogIn_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LogIn_Edit_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/antic"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/Password"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:errorEnabled="true"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LogIn_Edit_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/antic"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"/>



    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LogInButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/antic"
        android:onClick="LogIn"
        android:textAllCaps="false"
        android:text="@string/SignIn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:errorTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Password" />

    <TextView
        android:id="@+id/register"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/register_textview_button"
        android:fontFamily="@font/antic"
        android:minHeight="30dp"
        android:onClick="registerButton"
        android:text="@string/NotYetReg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogInButton" />


</androidx.constraintlayout.widget.ConstraintLayout>