<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

    <TextView
        android:id="@+id/Registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Register"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/antic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_First_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:hint="@string/FirstName"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registration_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_First_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_Middle_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:hint="@string/MiddleName"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_First_Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Middle_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_Last_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:hint="@string/LastName"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Middle_Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Last_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:hint="@string/Username"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Last_Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EditText_BirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="16dp"
            android:hint="BirthDate"
            android:onClick="openDatePicker"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorEnabled="true"
            app:hintTextColor="@color/teal_700"
            app:errorIconTint="@color/teal_700"
            app:errorTextColor="@color/teal_700"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditText_Username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Edit_BirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_textfields"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:fontFamily="@font/antic"
                android:inputType="none"
                android:onClick="openDatePicker"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:hint="@string/EmailAddress"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_BirthDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:hint="@string/Address"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_Phone_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:hint="@string/PhoneNumber"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Phone_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EditText_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:hint="@string/Password"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/teal_700"
        app:errorIconTint="@color/teal_700"
        app:errorTextColor="@color/teal_700"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Phone_Number"
        app:helperTextEnabled="true"
        app:helperTextTextAppearance="@style/HelperTextAppearance"
        app:helperTextTextColor="@color/black"
        app:helperText="Minimum of 6 characters">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Edit_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:inputType="textPassword"
            android:background="@drawable/round_textfields"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registrationButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:fontFamily="@font/antic"
        android:onClick="registerFirebase"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:background="@drawable/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText_Password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>